recursion.cons.remove.Remove.scala.error
Erreur de compilation :
Remove:5: error: not found: type v
    if(l.head!=List[v]){
                    ^Remove:5: error: missing arguments for method apply in object List;
follow this method with `_' if you want to treat it as a partially applied function
    if(l.head!=List[v]){
                   ^Remove:5: error: type mismatch;
 found   : Unit
 required: List[Int]
    if(l.head!=List[v]){
    ^